@@ -1,3 +1,7 @@
+2005-06-23  Peter Bienstman  <Peter.Bienstman@UGent.be>
+
+	* camfr_wrap.cpp: Wrap extra BlochSection functions.
+
 2005-06-13  Peter Debackere  <Peter.Debackere@UGent.be>
 
 	* camfr_wrap.cpp: Add ASR solver.
